# living-templates

./: .gitignore  GETTING_STARTED.md  Makefile  README.md  app-config.json  architecture.md  hello.txt  pyproject.toml
examples/: config-template.yaml  database.json  hello-world.yaml  node-references-example.yaml  program-example.py  sample_data.csv  tail-example.yaml  tail-monitor.yaml  test-template.yaml  webhook-example.yaml  webhook-logger.yaml
src/living_templates/: __init__.py  cli.py  client.py  webhook_server.py
src/living_templates/core/: config.py  daemon.py  executor.py  models.py  storage.py  tail_watcher.py  template_engine.py
tests/: test_basic.py
