[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "living-templates"
dynamic = ["version"]
description = "Reactive file system for automatic template updates"
authors = [
    {name = "Living Templates Contributors", email = "contact@living-templates.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "pydantic>=1.8.0",
    "aiohttp>=3.8.0",
    "aiosqlite>=0.17.0",
    "watchdog>=2.1.0",
    "pyyaml>=6.0.0",
    "rich>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.991",
    "flake8>=5.0.0",
]

[project.scripts]
living-templates = "living_templates.cli:main"
lt = "living_templates.cli:lt_main"
lt-webhook-server = "living_templates.webhook_server:main"

[project.urls]
"Homepage" = "https://github.com/living-templates/living-templates"
"Bug Reports" = "https://github.com/living-templates/living-templates/issues"
"Source" = "https://github.com/living-templates/living-templates"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["living_templates", "living_templates.core"]

[tool.setuptools_scm]
write_to = "src/living_templates/_version.py"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 